--- a/Volcano from Space.ipynb
+++ b/Volcano from Space.ipynb
@@ -45,7 +45,7 @@
    },
    "source": [
     "\n",
-    "Back to Etna now. First we will import all python modules that we need:"
+    "Back to Etna now. First we will import all python modules that we need and define a function to help us plot images nicely:"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "source": [
     "The image is much different now. We can easily distinguish snow from smoke. More interestingly hot lava flow can now be nicely observed. It appears red and yellow due to high values in B12 (red color) and in B11 (green color). However, in nature lava would (still) be black (dark) as we saw in true color image.\n",
     "\n",
-    "Now that we know hot to visualize data in a useful way, let's put all images acquired during Etan eruption together to gain some understanding of the dynamic of the phenomenon:"
+    "Now that we know hot to visualize data in a useful way, let's put all images acquired during Etna's eruption toghetr to gain some understanding of the dynamic of the phenomenon:"
    ]
   },
   {
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07a11638e71146cda68d085f46da5966",
+       "model_id": "a9caf0a05ecb4fdcbc9be68dc568a38c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,7 +330,7 @@
     "\n",
     "dropdown_date = widgets.Dropdown(\n",
     "                                options=wms_bands_dates_l8,\n",
-    "                                value=wms_bands_dates_l8[4],\n",
+    "                                value=wms_bands_dates_l8[0],\n",
     "                                description='Date:',\n",
     "                                disabled=False,\n",
     "                                )\n",
