--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -381,7 +381,7 @@
     "collapsed": true
    },
    "source": [
-    "## Otehr Resources to Check\n",
+    "## Other Resources to Check\n",
     "\n",
     "- Volcanoes by ESA: https://www.esa.int/Our_Activities/Observing_the_Earth/Volcanoes\n",
     "- Earth's Most Active Volcanoes on Satellite Watch by ESA: https://www.esa.int/Our_Activities/Observing_the_Earth/Earth_s_most_active_volcanoes_on_satellite_watch\n",
