Replace math.exp with np.exp

--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -75,7 +75,6 @@
     "import datetime\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
     "import scipy.constants as sc\n",
     "import requests as  r\n",
     "import ipywidgets as widgets\n",
@@ -140,7 +139,7 @@
     "    plt.gca().add_artist(scalebar)\n",
     "    \n",
     "  \n",
-    "def visualize_images(images, dates, i, R, G, B):\n",
+    " def visualize_images(images, dates, i, R, G, B):\n",
     "    \"\"\"\n",
     "    This function will draw an image selected from the list of \"images\"\n",
     "    for a given \"date\". It is linked to dropdown list from which user \n",
@@ -371,13 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29a07a74832040e1b7218410de596929",
+       "model_id": "ba4d8b6576414510a56362c12cccd976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +394,7 @@
     "h = sc.Planck\n",
     "c = sc.speed_of_light\n",
     "kb = sc.Boltzmann\n",
-    "e = math.exp(1)\n",
+    "e = np.exp(1)\n",
     "b = sc.Wien\n",
     "\n",
     "hc_kb = h*c/kb\n",
