--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -386,7 +386,7 @@
    "source": [
     "# Show/hide option was taken from: https://gist.github.com/Zsailer/5d1f4e357c78409dd9a5a4e5c61be552\n",
     "tag = HTML('''<script>\n",
-    "code_show=false; \n",
+    "code_show=true; \n",
     "function code_toggle() {\n",
     "    if (code_show){\n",
     "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
