Toggle code removed, downloaded data added.

--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
     "# This is a first cell that needs to be executed. To do so click on it\n",
     "# and press: \"ctrl + Enter\"\n",
     "# limited education instance \n",
-    "INSTANCE_ID = 'cf8091e5-2837-463e-b45d-8dc0b121cad7'"
+    "INSTANCE_ID = 'caa601dd-b742-4a23-9521-d28b6a5c50e0'"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -341,37 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "    if (code_show){\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       "    } else {\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       "    }\n",
-       "    code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<a href=\"javascript:code_toggle()\"><i>Show/hide the code that generates the figure.</i></a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecb91071b2ba4f4281c5f5324c79588a",
+       "model_id": "163110754a4f4730a88688f465efc789",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,23 +360,7 @@
     }
    ],
    "source": [
-    "# Show/hide option was taken from: https://gist.github.com/Zsailer/5d1f4e357c78409dd9a5a4e5c61be552\n",
-    "tag = HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "    if (code_show){\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-    "    } else {\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-    "    }\n",
-    "    code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "<a href=\"javascript:code_toggle()\"><i>Show/hide the code that generates the figure.</i></a>''')\n",
-    "display(tag)\n",
-    "\n",
-    "# Radiant curves\n",
+    "# Plotting radiation curves\n",
     "# Constants\n",
     "h = sc.Planck\n",
     "c = sc.speed_of_light\n",
@@ -434,19 +394,19 @@
     "\n",
     "def draw_spectrum (custom_temperature, draw_curves, draw_RGB, draw_s2, draw_l8):\n",
     "    fig, ax = plt.subplots (2, 1, figsize=(16, 12))\n",
-    "\n",
+    "    \n",
+    "    # Generate data\n",
     "    wavelengths = np.linspace(100, 13000, 400) #(start, stop, no. of samples) in nm\n",
     "    \n",
+    "    # Set some global characteristics of the plots\n",
     "    ax[0].set_title(\"Overview plot\")\n",
     "    ax[1].set_title(\"Detailed plot for wavelengths up to 2500 nm\")\n",
     "    ax[1].set_xlim(0, 13000);\n",
     "    ax[1].set_xlim(0, 2500);\n",
-    "    #ax[2].set_xlim(8000, 13000);\n",
-    "    #ax[2].set_ylim(0, 5 * 10**(8));\n",
     "    \n",
-    "    for a in ax: #the same thing is drawn in all subplots but we set different limits \n",
-    "                 #on axes for each subplot (= zoom in/out)\n",
-    "\n",
+    "    # The same thing will be drawn in all subplots but we set different limits \n",
+    "    # for x axes for each subplot to achive \"zoom in\" effect.\n",
+    "    for a in ax: \n",
     "        if custom_temperature:\n",
     "            draw_curve (a, wavelengths, custom_temperature, '#ff1a1a')\n",
     "            \n",
@@ -472,6 +432,7 @@
     "\n",
     "        a.set_xlabel('Wavelength [nm]')\n",
     "        a.set_ylabel(r'Spectral radiance [W·sr$^\\mathsf{-1}$·m$^\\mathsf{-3}$]')\n",
+    "\n",
     "        \n",
     "# Widgets\n",
     "style = {'description_width': 'initial'}\n",
@@ -554,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58285d0a9ad24c44bf89a24ba923f2af",
+       "model_id": "c2a67fa209124d9993c455d88aef1036",
        "version_major": 2,
        "version_minor": 0
       },
@@ -668,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +697,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e1d7c1ca89e42e18a5cbc8fa49247a6",
+       "model_id": "cda7d50ed95141fcb2bcc046cb448cd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -797,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -828,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444a25bbaa4d4c94a15691a7c1837eb0",
+       "model_id": "f8f259edef474599914fe2c682f415d3",
        "version_major": 2,
        "version_minor": 0
       },
