--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# This is a first cell that needs to be executed. To do so click on it\n",
-    "# and press: \"ctrl + Enter\"\n",
+    "# This is a first cell that needs to be executed. \n",
+    "# Click on it and press: \"ctrl + Enter\".\n",
     "# limited education instance \n",
     "INSTANCE_ID = 'cf8091e5-2837-463e-b45d-8dc0b121cad7'"
    ]
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
     "\n",
     "\n",
     "# Satellite Bands with their wavelengths   \n",
-    "# S2 bands, (band name, S2A central wavelength, S2A bandwidth, S2B central wavelength, S2B bandwidth)\n",
+    "# S2 bands, (band name, S2A central wavelength, S2A bandwidth, ...)\n",
     "bands_s2 =[ (\"B01\", 442.7, 21, 442.2, 21, 60),\n",
     "            (\"B02\", 492.4, 66, 492.1, 66, 10),\n",
     "            (\"B03\", 559.8, 36, 559.0, 36, 10),\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -215,11 +215,12 @@
     "etna_bbox = BBox(bbox=etna_bbox_web_mercator, crs=CRS.WGS84)\n",
     "\n",
     "# Prepare a request, we follow the example here: \n",
-    "#https://sentinelhub-py.readthedocs.io/en/latest/examples/ogc_request.html#Example-1:-True-color-(PNG)-on-a-specific-date\n",
+    "# https://sentinelhub-py.readthedocs.io/en/latest/examples.html\n",
+    "# Folow the link above to get description of parameters.\n",
     "true_color_request_s2 = WmsRequest(data_folder='data',\n",
     "                           layer='TRUE-COLOR-S2-L1C',\n",
     "                           bbox=etna_bbox,\n",
-    "                           time=('2017-02-27','2017-04-18'), # time period when the volcano was active\n",
+    "                           time=('2017-02-27','2017-04-18'),\n",
     "                           width=512,\n",
     "                           maxcc=0.8,\n",
     "                           instance_id=INSTANCE_ID,\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -341,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "163110754a4f4730a88688f465efc789",
+       "model_id": "5f2f6ca3f2b64576859c50af272a0b4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,7 +397,7 @@
     "    fig, ax = plt.subplots (2, 1, figsize=(16, 12))\n",
     "    \n",
     "    # Generate data\n",
-    "    wavelengths = np.linspace(100, 13000, 400) #(start, stop, no. of samples) in nm\n",
+    "    wavelengths = np.linspace(100, 13000, 400) #(start, stop, number) in nm\n",
     "    \n",
     "    # Set some global characteristics of the plots\n",
     "    ax[0].set_title(\"Overview plot\")\n",
@@ -423,7 +424,8 @@
     "        # add Sentinel 2 bands\n",
     "        if draw_s2:\n",
     "            for band in bands_s2:\n",
-    "                a.axvspan((band[1] - band[2]/2) , (band[1] + band[2]/2), facecolor='#2ca02c', alpha=0.4)\n",
+    "                a.axvspan((band[1] - band[2]/2) , (band[1] + band[2]/2), \n",
+    "                          facecolor='#2ca02c', alpha=0.4)\n",
     "\n",
     "        # add Landsat 8 bands\n",
     "        if draw_l8:\n",
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -551,9 +553,9 @@
     "bands_img_s2 = bands_request_s2.get_data(save_data=True)\n",
     "bands_dates_s2 = bands_request_s2.get_dates()\n",
     "\n",
+    "#Note: Numbers 12, 11, 3 do not indicate bands but indexes of bands_img_s2 array.\n",
     "plot_image(bands_img_s2[display_image][:, :, [12, 11, 3]], \n",
-    "           etna_bbox, \n",
-    "           2.5) #Numbers 12, 11, 3 do not indicate bands but indexed of bands_img_s2 array.\n",
+    "           etna_bbox, 2.5) \n",
     "plt.title('Etna, B12, B11, B04 bands composite, acquired with Sentinel 2 \\\n",
     "on '+ str(bands_dates_s2[display_image].date()))\n",
     "print()"
@@ -572,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2a67fa209124d9993c455d88aef1036",
+       "model_id": "3d09fad703e74c5eba89687902efeb5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -629,15 +631,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We downloaded 6 images, each one acquired on different date (i.e.      time series). \n",
-      "Single image is of type <class 'numpy.ndarray'> and has shape (516, 512, 3). First two dimensions       are size of downloaded image in pixels and the last is a number of       downloaded bands: red, green blue).\n",
+      "We downloaded 6 images, each one acquired on different date (i.e.time series). \n",
+      "Single image is of type <class 'numpy.ndarray'> and has shape (516, 512, 3). First two dimensions are size of downloaded image in pixels and the last is a number of downloaded bands: red, green blue).\n",
       "\n"
      ]
     },
@@ -668,10 +670,10 @@
     "true_color_img_l8 = true_color_request_l8.get_data(save_data=True)\n",
     "true_color_dates_l8 = true_color_request_l8.get_dates()\n",
     "print('We downloaded %d images, each one acquired on different date (i.e.\\\n",
-    "      time series). ' % len(true_color_img_l8))\n",
+    "time series). ' % len(true_color_img_l8))\n",
     "print('Single image is of type {} and has shape {}. First two dimensions \\\n",
-    "      are size of downloaded image in pixels and the last is a number of \\\n",
-    "      downloaded bands: red, green blue).'.format(type(\n",
+    "are size of downloaded image in pixels and the last is a number of \\\n",
+    "downloaded bands: red, green blue).'.format(type(\n",
     "    true_color_img_l8[-1]), true_color_img_l8[-1].shape))\n",
     "\n",
     "# Display one of the true color images.\n",
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +699,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cda7d50ed95141fcb2bcc046cb448cd0",
+       "model_id": "084fc54b610241ad860a82e7f4ee5423",
        "version_major": 2,
        "version_minor": 0
       },
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -777,19 +779,22 @@
     "#Create list of tuples (image, date, data source) and sort the list by dates\n",
     "both_satellites = []\n",
     "for index, image in enumerate([RGB_s2 + RGB_l8][0]):\n",
-    "    both_satellites.append((image,[bands_dates_s2 + bands_dates_l8][0][index], data_source[index]))\n",
+    "    both_satellites.append((image,\n",
+    "                            [bands_dates_s2 + bands_dates_l8][0][index], \n",
+    "                            data_source[index]))\n",
     "both_satellites_sorted = sorted(both_satellites, key=lambda tup: tup[1])\n",
     "\n",
     "#Re-arange into seperate lists, which are needed for vizualisation\n",
     "images_both = [image_date_ds[0] for image_date_ds in both_satellites_sorted]\n",
     "#dates_both = [image_date_ds[1] for image_date_ds in both_satellites_sorted]\n",
     "#sources_bouth = [image_date_ds[2] for image_date_ds in both_satellites_sorted] \n",
-    "dates_sources_both = [str(image_date_ds[1])[:-9] + \", Satellite:\"+ image_date_ds[2] for image_date_ds in both_satellites_sorted]"
+    "dates_sources_both = [str(image_date_ds[1])[:-9] + \", Satellite:\"+ image_date_ds[2] \n",
+    "                      for image_date_ds in both_satellites_sorted]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +807,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8f259edef474599914fe2c682f415d3",
+       "model_id": "03b355828f1e4087865b92747bb889b4",
        "version_major": 2,
        "version_minor": 0
       },
