--- a/volcanoes/Volcano from Space.ipynb
+++ b/volcanoes/Volcano from Space.ipynb
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both figures above show radiation curves of blackbodies at different temperatures (black) and visible part of the spectrum (blue, green and read colors in background). The curves are presentation of Planck's Law. Dots represent maximum of each curve. Note how curves with lower temperatures have maximum at lower wavelengths (= what Wien Displacement Law says). The Sun's temperature is approximately 5778K and its radiation has a peak around 500 nm, which corresponds to visible part of the spectrum. Whereas Earth's radiation peaks around 10000 nm, it does not emit visible light thus we cannot see it with naked eye unless it is illuminated by the Sun (or some other source of visible light).\n",
+    "Both figures above show radiation curves of blackbodies at different temperatures (black) and visible part of the spectrum (blue, green and read colors in background). The curves are presentation of Planck's Law. Dots represent maximum of each curve. Note how curves with lower temperatures have maximum at longer wavelengths (= what Wien Displacement Law says). The Sun's temperature is approximately 5778K and its radiation has a peak around 500 nm, which corresponds to visible part of the spectrum. Whereas Earth's radiation peaks around 10000 nm, it does not emit visible light thus we cannot see it with naked eye unless it is illuminated by the Sun (or some other source of visible light).\n",
     "\n",
     "#### 2.2.1 Play with the graph\n",
     "1) Try to insert arbitrary temperature in text box and click outside of it. The radiation curve for blackbody with the temperature in red color will be added to the graph. \n",
